[gd_scene load_steps=8 format=3 uid="uid://1b6isml7mpuj"]

[ext_resource type="Script" uid="uid://dtwi2um6irg35" path="res://scripts/UIManager.gd" id="1_nt7q6"]
[ext_resource type="Texture2D" uid="uid://mswrcc0ecmwm" path="res://assets/sprites/gui/Godot UI/dna asset.png" id="2_p7vwb"]
[ext_resource type="Texture2D" uid="uid://dmhau2c8sbjvs" path="res://assets/sprites/gui/Godot UI/godt you win.png" id="2_yev5y"]
[ext_resource type="Texture2D" uid="uid://sl01toyvpxai" path="res://assets/sprites/gui/Godot UI/Godot UI/Out of lives/godt retry button.png" id="3_gdt2y"]
[ext_resource type="Texture2D" uid="uid://cmg5l5ydsmdbp" path="res://assets/sprites/gui/Godot UI/Heart-removebg-preview.png" id="3_ktti3"]
[ext_resource type="Texture2D" uid="uid://ctp84tj3v17se" path="res://assets/sprites/gui/Godot UI/Godot UI/Out of lives/godt OUT OF LIVES.png" id="4_wm3ai"]
[ext_resource type="Texture2D" uid="uid://cq2mt5ptgc7ct" path="res://assets/sprites/gui/Godot UI/Godot UI/Out of lives/godt home button.png" id="5_8dubc"]

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("level_completed_panel", "game_over_panel")]
script = ExtResource("1_nt7q6")
level_completed_panel = NodePath("LevelCompletedPanel")
game_over_panel = NodePath("GameOverPanel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 32.0
offset_right = 128.0
offset_bottom = 64.0
theme_override_constants/separation = 15

[node name="CoinLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DNA : XXX"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CoinLabel"]
layout_mode = 0
offset_left = -32.0
offset_bottom = 32.0
texture = ExtResource("2_p7vwb")

[node name="LivesLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lives: XXX"

[node name="HeartRemovebgPreview" type="Sprite2D" parent="VBoxContainer/LivesLabel"]
position = Vector2(-17, 13.000004)
scale = Vector2(0.094444446, 0.099999994)
texture = ExtResource("3_ktti3")

[node name="TypeGunLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Type: M ENZIM"

[node name="AmmoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ammo: âˆž"

[node name="LevelCompletedPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="LevelCompletedPanel"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_yev5y")

[node name="Completed" type="Button" parent="LevelCompletedPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.711
anchor_right = 0.55
anchor_bottom = 0.711
offset_left = -1.0
offset_top = 0.039993286
offset_right = 71.0
offset_bottom = 72.03999
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("5_8dubc")

[node name="ReplayButton" type="Button" parent="LevelCompletedPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50200003
anchor_top = 0.711
anchor_right = 0.50200003
anchor_bottom = 0.711
offset_left = -72.28003
offset_top = 0.039993286
offset_right = -0.2800293
offset_bottom = 72.03999
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("3_gdt2y")

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="GameOverPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_wm3ai")

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.52500004
anchor_top = 0.77800006
anchor_right = 0.52500004
anchor_bottom = 0.77800006
offset_left = -80.00003
offset_top = -24.080017
offset_right = 79.99997
offset_bottom = 39.919983
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="ReplayButton" type="Button" parent="GameOverPanel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_gdt2y")

[node name="MenuButton" type="Button" parent="GameOverPanel/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_8dubc")

[node name="VolumeContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -171.0
offset_top = 11.0
offset_right = -7.0
offset_bottom = 61.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VolumeContainer/HBoxContainer"]
layout_mode = 2
text = "BGM"

[node name="BGMHSlider" type="HSlider" parent="VolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="VolumeContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="VolumeContainer/HBoxContainer2"]
layout_mode = 2
text = "SFX"

[node name="SFXHSlider" type="HSlider" parent="VolumeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
